Agregando el primer parrafo

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <article>
             <h2>Juan Carlos</h2>
             <p>Pruebas que realizo</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor numquam cumque corrupti odio itaque, iste voluptatum voluptates quisquam culpa illo ex? Praesentium impedit dolorum quas quod voluptates, saepe dolorem placeat.</p>
         </article>
     </main>
     <footer>
