--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </article>
     </main>
     <footer>
-        <p>@juancarlosenrique</p>
+        <p>@juancarlosenrique @mabel</p>
     </footer>
     
 </body>
