Cambio de nombre

--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
           <img src="https://picsum.photos/350/390" alt="" />
         </figure>
       <div class="info">
-        <h3>The Dude</h3>
-        <small>@TheDudeAbides</small>
+        <h3>Juan Carlos</h3>
+        <small>@carlosenrique103</small>
         <p>
           Lorem ipsum dolor sit amet consectetur <br />
           adipisicing elit. Consectetur
